<resources>
    <string name="app_name">TeamTravel</string>
    <string name="placeNameHint">Place name</string>
    <string name="latitudeHint">Latitude</string>
    <string name="longitudeHint">Longitude</string>
    <string name="addPlaceBtnStr">Add place</string>
    <string name="defFullName">NoFullname</string>
    <string name="selectedLatitudeLabelStr">Latitude:</string>
    <string name="selectedLongitudeLabelStr">Longitude:</string>
    <string name="defLatitudeVal">0.000000</string>
    <string name="defLongitudeVal">0.000000</string>
    <string name="distanceLabelStr">Distance:</string>
    <string name="distanceValueStr">0 м.</string>
    <string name="defIvan">Иван</string>
    <string name="defIvanov">Иванов</string>
    <string name="def15m">15 м.</string>
    <string name="personNameIDPattern">person_name_</string>
    <string name="personDistanceIDPattern">person_dist_</string>
    <string name="inputSecondNamestr">Place second name</string>
    <string name="placeSecondNameHint">Place second name</string>
    <string name="searchBtnText">Search</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="inputEmailRegStr">E-mail</string>
    <string name="inputPasswordRegStr">Password</string>
    <string name="inputSecondNameRegStr">Second name</string>
    <string name="confirmPasswordReg">Confirm</string>
    <string name="inputFirstNameRegStr">First name</string>
    <string name="registrationButton">Registration</string>
    <string name="registrationBtnAuthStr">Registration</string>
    <string name="defUserNameStr">username</string>
    <string name="teamNameStr">Team name</string>
    <string name="teamPasswordStr">Password</string>
    <string name="createTeamLabelStr">Create team</string>
    <item name="personData" type="id" />
    <item name="personLocationData" type="id" />
</resources>
